--- a/client/src/components/overview/assets/styles.css
+++ b/client/src/components/overview/assets/styles.css
@@ -415,6 +415,7 @@ border: 5px dashed coral; */
 #footer-content {
 	margin: 10px;
 	font-size: 14px;
+	text-align: center;
 	/* border: 1px dashed blue; */
 }
 
